# bubi-aws-uploader

./: .gitignore  README.md  bucket_policy.json  deploy.sh.template  lambda_function.py  lib.py  pyproject.toml
tests/: test_sample.py
